--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "travel-site",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "A gatsby site to see our travels",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -14,18 +14,24 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.18.8",
+    "@emotion/core": "10.0.22",
+    "@emotion/styled": "10.0.23",
+    "gatsby": "^2.18.13",
+    "gatsby-plugin-emotion": "4.1.18",
+    "gatsby-plugin-react-helmet": "3.1.18",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "5.2.1",
+    "react-icons": "3.8.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/valerieernst/travel-site"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/valerieernst/travel-site"
   }
 }
