--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^2.18.13",
     "gatsby-plugin-emotion": "4.1.18",
     "gatsby-plugin-react-helmet": "3.1.18",
+    "mysql": "2.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "5.2.1",
