--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@emotion/core": "10.0.22",
-    "@emotion/styled": "10.0.23",
-    "gatsby": "^2.18.13",
-    "gatsby-plugin-emotion": "4.1.18",
-    "gatsby-plugin-react-helmet": "3.1.18",
-    "mysql": "2.17.1",
+    "@emotion/core": "10.0.27",
+    "@emotion/styled": "10.0.27",
+    "gatsby": "^2.19.15",
+    "gatsby-background-image": "^0.9.14",
+    "gatsby-plugin-emotion": "4.1.22",
+    "gatsby-plugin-react-helmet": "3.1.22",
+    "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-source-filesystem": "^2.1.48",
+    "gatsby-transformer-sharp": "^2.3.14",
+    "mysql": "2.18.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "5.2.1",
-    "react-icons": "3.8.0"
+    "react-icons": "3.9.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
